<resources>
    <string name="app_name">Task Management System</string>
    <string name="text_task_priority">Priority:</string>
    <string name="text_exp_finish_date">Exp. Finish Date:</string>

    <!-- LoginActivity-->

    <string name="text_login">Login</string>
    <color name="dark_grey">#616161</color>
    <string name="text_incorrect_username_password">Incorrect Username or Password!</string>
    <string name="text_username">Username:</string>
    <string name="edit_username">Enter your username</string>
    <string name="text_password">Password:</string>
    <string name="edit_password">Enter your password</string>
    <string name="image_desc">Desc</string>
    <string name="button_rememberme">Remember Me</string>
    <string name="button_submit">Submit</string>
    <string name="placeholder">Hello</string>
    <string name="text_forgot_username_password">Forgot username or password?</string>

    <!-- Login Activity Ends -->

    <!-- =========================================================================================== -->

    <!-- Main Activity Starts -->
    <string name="title_home">Home</string>
    <string name="text_current_tasks">Currently Ongoing Tasks</string>


    <!-- Main Activity Ends -->

    <!-- =========================================================================================== -->

    <!-- CreateTaskActivity -->

    <string name="title_create_new_task">Create New Task</string>
    <string name="text_create_new_task">Create New Task</string>
    <string name="text_task_subject">Subject:</string>
    <string name="edit_task_subject">Enter task subject</string>
    <string name="text_task_category">Category:</string>
    <string-array name="array_task_categories">
        <item>Type1</item>
        <item>Type2</item>
    </string-array>
    <string name="text_task_description">Description:</string>
    <string name="edit_task_description">(Max. 100 characters)</string>
    <string name="text_planned_finish_date">Planned Finish Date:</string>
    <string name="edit_planned_finish_date">(DD-MM-YYYY)</string>
    <string name="text_priority">Priority:</string>
    <string-array name="array_priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="text_responsible">Responsible:</string>
    <string name="edit_responsible">Person Responsible</string>
    <string name="text_accountable">Accountable:</string>
    <string name="edit_accountable">Person Accountable</string>
    <string name="text_project">Project:</string>
    <string name="edit_project">Project Name</string>
    <string name="text_department">Department:</string>
    <string name="edit_department">Department Name</string>
    <string name="text_team_name">Team Name:</string>
    <string name="edit_team_name">Name</string>
    <string name="text_reminder_required">Is Reminder Required?</string>
    <string-array name="array_reminder_required">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="text_task_status">Task Status</string>
    <string-array name="array_task_status">
        <item>To be started</item>
        <item>Ongoing</item>
        <item>Complete</item>
    </string-array>
    <string name="text_percent_complete">% Complete</string>
    <string-array name="array_percent_complete">
        <item>0% complete</item>
        <item>25% complete</item>
        <item>50% complete</item>
        <item>75% complete</item>
    </string-array>
    <string name="text_remarks">Remarks</string>
    <string name="edit_remarks">(Max. 100 characters)</string>
    <string name="button_submit_create_task">Submit</string>
    <string name="button_cancel_create_task">Cancel</string>

    <!-- CreateTaskActivity Ends -->


    <!--CreateMeetingActivity Starts-->

    <string name="title_create_new_meeting">Create New Meeting</string>
    <string name="text_meeting_title">Title:</string>
    <string name="edit_meeting_title">Meeting Title</string>
    <string name="text_meeting_type">Type:</string>
    <string-array name="array_meeting_types">
        <item>Type1</item>
        <item>Type2</item>
    </string-array>
    <string name="text_meeting_description">Description</string>
    <string name="edit_meeting_description">(Max 100 characters)</string>
    <string name="text_conducted_for">Conducted For:</string>
    <string name="edit_conducted_for">Conducted For?</string>
    <string name="text_meeting_frequency">Frequency:</string>
    <string-array name="array_meeting_frequency">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="text_meeting_date">Date:</string>
    <string name="edit_meeting_date">(DD/MM/YYYY)</string>
    <string name="text_meeting_time">Time:</string>
    <string name="edit_meeting_time">hh:mm</string>
    <string name="text_meeting_venue">Venue:</string>
    <string name="edit_meeting_venue">Venue</string>
    <string name="text_participants">Participants</string>
    <string name="edit_participants">(Add Participants)</string>

    <!--Placeholder -->
    <string-array name="placeholder_participants">
        <item>Abc</item>
        <item>Def</item>
        <item>Ade</item>
        <item>Are</item>
        <item>Pqr</item>
        <item>Pxz</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--CreateMeetingActivity Ends-->

    <!-- =========================================================================================== -->

    <!--Navigation Drawer items-->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_meetings">Meetings</string>
    <string name="nav_view_tasks">View Tasks</string>
    <string name="nav_create_task">Create Task</string>
    <string name="nav_view_meetings">View Meetings</string>
    <string name="nav_create_meeting">Create Meeting</string>

    <!-- =========================================================================================== -->

    <!-- ViewAllTasksActivity starts -->

    <string name="text_all_tasks">All tasks</string>
    <string-array name="array_responsible_accountable">
        <item>Responsible</item>
        <item>Accountable</item>
        <item>Created</item>
    </string-array>

    <!-- ViewAllTasksActivity ends -->

    <!-- =========================================================================================== -->

    <!-- ViewSingleTaskActivity starts -->

    <string name="text_task_subject_view">Subject:</string>
    <string name="text_task_type_view">Type:</string>
    <string name="text_task_description_view">Description:</string>
    <string name="text_task_date_created_view">Date Created:</string>
    <string name="text_task_planned_finish_date_view">Planned Finish Date:</string>
    <string name="text_task_actual_finish_date_view">Actual Finish Date:</string>
    <string name="text_task_creator_view">Creator:</string>
    <string name="text_task_responsible_view">Responsible:</string>
    <string name="text_task_accountable_view">Accountable:</string>
    <string name="text_task_project_view">Concerned Project:</string>
    <string name="text_task_department_view">Concerned Department:</string>
    <string name="text_task_team_name_view">Team Name:</string>
    <string name="text_task_remarks_view">Remarks:</string>
    <string name="text_task_status_view">Status:</string>
    <string name="text_task_percent_complete_view">% complete:</string>
    <string name="title_activity_edit_task">EditTaskActivity</string>
    <string name="title_activity_view_all_meetings">ViewAllMeetingsActivity</string>

    <string-array name="array_creator_attendee">
        <item>Attended</item>
        <item>Created</item>
    </string-array>

    <string name="text_register">Register</string>
    <string name="text_enter_username">Choose a Username:</string>
    <string name="edit_enter_username">Username</string>
    <string name="text_enter_password">Enter Password:</string>
    <string name="edit_enter_password">Password</string>
    <string name="text_confirm_password">Confirm Password:</string>
    <string name="edit_confirm_password">Confirm Password</string>
    <string name="text_create_account">Don\'t have an account? Create one.</string>
    <string name="text_already_have_account">Already have an account? Log In.</string>
</resources>
