<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context="com.ltr.taskmanagementsystem.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="158dp"
        android:layout_height="152dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="115dp"
        android:layout_height="43dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_login"
        android:textAlignment="center"
        android:textColor="@color/login_page_text_color"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvIncorrectUsernamePassword"
        android:layout_width="180dp"
        android:layout_height="13dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_incorrect_username_password"
        android:textAlignment="center"
        android:textColor="@color/invalid_username_password"
        android:textSize="12sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_username"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/login_page_text_color"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIncorrectUsernamePassword" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/login_page_text_color"
        android:ems="10"
        android:hint="@string/edit_username"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="92dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_password"
        android:textColor="@color/login_page_text_color"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/login_page_text_color"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <CheckBox
        android:id="@+id/chkRememberMe"
        style="@android:style/Theme.Material.Light"
        android:layout_width="142dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:buttonTint="@color/login_page_text_color"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/button_rememberme"
        android:textAlignment="viewStart"
        android:textColor="@color/login_page_text_color"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="145dp"
        android:layout_height="49dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/button_rounded_corners"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="login"
        android:text="@string/button_submit"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvForgotUsernamePassword"
        android:layout_width="168dp"
        android:layout_height="15dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/text_forgot_username_password"
        android:textAllCaps="false"
        android:textColor="@color/forgot_username_password"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkRememberMe" />

</android.support.constraint.ConstraintLayout>
